<resources>
    <string name="app_name">Русские пароли</string>
    <string name="type_your_ru_password">Здесь вы можете посмотреть свой пароль, созданный по методу "русское слово в английский раскладке:</string>
    <string name="generate_new_password">Или сгенерируйте новый пароль, выбрав длину и наполенение:</string>
    <string name="uppercase">Заглавные</string>
    <string name="numbers">Цифры</string>
    <string name="special_symbols">Спецсимволы</string>
    <string name="generate">ГЕНЕРИРОВАТЬ</string>
    <string name="clipboard_title">Пароль</string>
    <string name="text_copied">Текст скопирован</string>
    <string name="enter_password">Введите пароль</string>
    <string name="bad_password">Плохой пароль</string>
    <string name="weak_password">Слабый пароль</string>
    <string name="good_password">Хороший пароль</string>
    <string name="excellent_password">Очень хороший пароль</string>
    <string name="choose_password_length">Выберите длину пароля:</string>
    <string name="enter_password_hint">Поле для ввода пароля</string>
    <string name="copy_password_button">Кнопка для копирования вашего пароля</string>
    <string name="copy_generated_password_button">Кнопка для копирования сгенерированного пароля</string>
    <string name="send_password">ПЕРЕСЛАТЬ ПАРОЛЬ</string>
    <string name="show_title">Очистить пароль</string>

    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
        <item>.</item>
    </string-array>

    <string-array name="latins">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
        <item>/</item>
    </string-array>

    <plurals name="symbols_count">
        <item quantity="one">%1$d символ</item>
        <item quantity="two">%1$d символа</item>
        <item quantity="few">%1$d символа</item>
        <item quantity="many">%1$d символов</item>
        <item quantity="other">%1$d символов</item>
    </plurals>
</resources>
